Add Soldier, QuestLine and Stuff